--- a/index.html
+++ b/index.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Portfolio</title>
-<meta name="viewport" content="width=device-width, initial-scale-1">
-<link rel="stylesheet href=xxx">
-<style></style>
-<script src=""></script>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale-1">
+    <link rel="stylesheet href=xxx">
+</head>
+
+
 <body>
+    <header>
+        <img src="./assets/portfolio.jpg" alt="Anna-in-Porto" style="width:25%">
 
-<img src="./assets/portfolio.jpg" alt="Anna-in-Porto" style="width:25%">
-
-<div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#about">About</a>
-    <a href="contact">Contact</a>
-</div>
-
-<div class="hero-image">
+        <nav>
+            <ul>
+                <li>
+                    <a class="active" href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#news">News</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="contact">Contact</a>
+                </li>
+            </ul>    
+        </nav>
+    </header>  
+    <div class="hero">
     <div class="hero-text">
         <h1>Anna Rose Benedetti</h1>
-        <p>Fullstack blah blah</p>
+        <p>Fullstack Developer, Content Strategist and Editor</p>
     </div>
-</div>
 
-<div class="">
-    <h1>Experience</h1>
-    <p>paragraph</p>
-    <p>paragraph</p>
-</div>
+    <main>
+        <div class="">
+            <h1>Experience</h1>
+            <p>paragraph</p>
+            <p>paragraph</p>
+        </div>
 
-<div class="projects">
-    <img src="xxx.jpeg" alt="main-project" style="width:100%">
-    <img src="xxx.jpeg" alt="main-project" style="width:50%">
-    <img src="xxx.jpeg" alt="main-project" style="width:50%">
-</div>
+        <div>
+            <aside>
+                <img src="xxx.jpeg" alt="main-project" style="width:100%">
+                <img src="xxx.jpeg" alt="main-project" style="width:50%">
+                <img src="xxx.jpeg" alt="main-project" style="width:50%">
+            </aside>
+        </div>
+    </main>
 
 </body>
 
