more styling edits, style testing

--- a/index.html
+++ b/index.html
@@ -1,58 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale-1">
-    <link rel="stylesheet href=xxx">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Portfolio</title>
+        <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" type="text/class" href="./assets/style.css" />
+    </head>
 
 
-<body>
-    <header>
-        <img src="./assets/portfolio.jpg" alt="Anna-in-Porto" style="width:25%">
-
-        <nav>
-            <ul>
-                <li>
-                    <a class="active" href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#news">News</a>
-                </li>
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="contact">Contact</a>
-                </li>
-            </ul>    
-        </nav>
-    </header>  
-    <div class="hero">
-    <div class="hero-text">
-        <h1>Anna Rose Benedetti</h1>
-        <p>Fullstack Developer, Content Strategist and Editor</p>
-    </div>
-
-    <main>
-        <div class="">
-            <h1>Experience</h1>
-            <p>paragraph</p>
-            <p>paragraph</p>
+    <body>
+        <header>
+            <img src="./assets/portfolio.jpg" alt="Anna-in-Porto" style="width:50%">
+            <nav>
+                <ul>
+                    <li><a href="#news">News</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="contact">Contact</a></li>
+                </ul>    
+            </nav>
+        </header>  
+        <div class="hero">
+        <div class="hero-text">
+            <h1>Anna Rose Benedetti</h1>
+            <p>Fullstack Developer, Content Strategist and Editor</p>
         </div>
 
-        <div>
-            <aside>
-                <img src="xxx.jpeg" alt="main-project" style="width:100%">
-                <img src="xxx.jpeg" alt="main-project" style="width:50%">
-                <img src="xxx.jpeg" alt="main-project" style="width:50%">
-            </aside>
-        </div>
-    </main>
+        <main>
+            <div class="">
+                <h1>Experience</h1>
+                <p>paragraph</p>
+                <p>paragraph</p>
+            </div>
 
-</body>
+            <div class="projects"
+                <section class="card">
+                    <header>Main Project</header>
+                    <img src="./assets/images/cute bunny 1.jpeg" alt="main-project" style="width:100%">
+                </section>
+                <section class="card">
+                    <header>2nd Project</header>
+                    <img src="./assets/images/cute bunny 2.jpeg" alt="second-project" style="width:50%">
+                </section> 
+                <section class="card">
+                    <header>3rd Project</header>   
+                    <img src="./assets/images/cute bunny 3.jpeg" alt="third-projectt" style="width:50%">
+                </section>
+            </div>
+        </main>
+
+    </body>
 
 
 
