--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="UTF-8" />
         <title>Portfolio</title>
         <meta name="viewport" content="width=device-width" />
-        <link rel="stylesheet" type="text/class" href="./assets/style.css" />
+        <link rel="stylesheet" type="text/css" href="assets/style.css" />
     </head>
 
 
     <body>
         <header>
-            <img src="./assets/portfolio.jpg" alt="Anna-in-Porto" style="width:50%">
+            <img src="./assets/images/portfolio.jpg" alt="Anna-in-Porto" style="width:25%">
             <nav>
                 <ul>
                     <li><a href="#news">News</a></li>
@@ -27,13 +27,13 @@
         </div>
 
         <main>
-            <div class="">
+            <div class="about-me">
                 <h1>Experience</h1>
                 <p>paragraph</p>
                 <p>paragraph</p>
             </div>
 
-            <div class="projects"
+            <div class="projects">
                 <section class="card">
                     <header>Main Project</header>
                     <img src="./assets/images/cute bunny 1.jpeg" alt="main-project" style="width:100%">
