adjusting margins, background color, box borders

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="./assets/images/portfolio.jpg" alt="Anna-in-Porto" style="width:25%">
             <nav>
                 <ul>
-                    <li><a href="#news">News</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="contact">Contact</a></li>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#get-in-touch">Get in Touch</a></li>
+                    <li><a href="collaborations">Collaborations</a></li>
                 </ul>    
             </nav>
         </header>  
@@ -32,7 +32,7 @@
                 <p>paragraph</p>
                 <p>paragraph</p>
             </div>
-
+            <br>
             <div class="projects">
                 <section class="card">
                     <header>Main Project</header>
@@ -48,7 +48,9 @@
                 </section>
             </div>
         </main>
-
+        <footer>
+            <p>&copy; 2023 Anna Rose Benedetti</p>
+        </footer>
     </body>
 
 
