--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@ nav a:hover {
                 <h2>Projects</h2>
             </section>
                 <!--main project has a larger image and links to deplayed site-->
-                <h3>Code Refactor</h3>
-                        <a href="https://abenedetti27.github.io/sustain-the-groove/">
-                        <img src="./assets/images/Refactor.png" alt="screen shot of website code-refactor" style="width:85%" >
+                <h3>Go Nutz Donutz</h3>
+                        <a href="https://flimits.github.io/gonutzfordonutz/">
+                        <img src="./assets/images/merch.png" alt="screen shot boop of merchandise page of website Go Nutz Donutz" style="width:85%" >
                 <!--allows images to list horizontally if screen size allows-->    </a>   
                 <li class="list-projects">
-                    <h3>Project Placeholder</h3>
-                    <img src="./assets/images/cute bunny 1.jpeg" alt="second-project" style="width:75%">
+                    <h3>Code Refactor</h3>
+                    <a href="https://abenedetti27.github.io/sustain-the-groove/">
+                    <img src="./assets/images/Refactor.png" alt="screen shot of website code-refactor"  style="width:75%">
                                 
                 <li class="list-projects">
                     <h3>Project Placeholder</h3>   
