refactor with new project

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ nav a:hover {
         <main>
             <section id="about-me">
                 <h2>About Me</h2>
-                    <h3>Hello! I'm Anna, a web developer, content strategist and editor based in Seattle. I have a liberal arts degree from the University of Washington, and have been working in the fashion industry, in many capacities, for the past 13 years. Throughout my career, I've had the opportunity to work as a buyer, run a fashion closet, own strategies for social media, an ecommerce site, and editorial content. When I'm not working, I'm passionate about hiking, traveling, going on adventures with my kid, and expolring the Seattle restaurant scene with my wife.</h3>
+                    <h3>Hello! I'm Anna, a web developer, content strategist and editor based in Seattle. I have a Bachelor's Degree in liberal arts degree from the University of Washington, and have been working in the fashion industry, in many capacities, for the past 13 years. Throughout my career, I've had the opportunity to work as a buyer, run a fashion closet, own strategies for social media, an ecommerce site, and editorial content. When I'm not working, I'm passionate about hiking, traveling, going on adventures with my kid, and expolring the Seattle restaurant scene with my wife.</h3>
               </section>
             <br>  
             <br>  
